# python-contacts-cli-2024

./: .gitignore  102012dl bday main .py  102012dl task main.py  README.md  bday.py  main.py  pyproject.toml
.github/workflows/: build.yaml  publish.yaml
app/: birthdays.py  cli.py  config.py  contacts.py  db.py  errors.py  model.py  notes.py
contacts24/: __main__.py  birthdays.py  cli.py  cli_commands.py  config.py  contacts.py  db.py  errors.py  notes_functions.py  os_resources.py  serialization_helper.py
contacts24/models/: address_book.py  note.py  notes.py  record.py
feature/if/: get-birthday bday.py  get-birthday main.py
