[tool.poetry]
name = "contacts24"
version = "0.4.0"
description = ""
authors = ["Vitaliy Kononenko <konvio@users.noreply.github.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "contacts24.cli:start"
